--- a/code7/springsecuritybasic/pom.xml
+++ b/code7/springsecuritybasic/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.pashmash</groupId>
-    <artifactId>springsecuritybasic2</artifactId>
+    <artifactId>springsecuritybasic6</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
@@ -40,7 +40,16 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
     <properties>
